feat: Routes of count reports
